--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 							<h1>VIII Semana de</h1>
 							<h1> Engenharia de Produção</h1>
 							<div class="video-container">
-								<iframe width="711" height="400" src="https://www.youtube.com/embed/75zJP7AKD90?rel=0&autoplay=0" frameborder="0" allowfullscreen></iframe>
+								<iframe width="711" height="400" src="https://www.youtube.com/embed/3bjSZIjjJQw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
 							</div>
 						</div>
 						<div class="4u" style="padding-top:9em!important">
