Fixing tables for mobile devices

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
 	</head>
 
 	<style type="text/css">
+
+
+
 		.video-container {
 		    position: relative;
 		    padding-bottom: 56.25%;
@@ -48,6 +51,8 @@
 		td img {
 			width: 35%;
 		}
+
+
 	</style>
 	
 	<body>
@@ -97,7 +102,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="12u">
-								<table style="width:100%;">
+								<table style="width:100%;" id="table-palestras">
 							<thead style="font-weight:600;"><th>Palestrante</th><th>Data</th><th>Horário</th><th>Preço</th><th>Vagas</th></thead>
 							<tbody>
 								<tr><td>Dr Klenio Alves</td><td>29-04-2014</td><td>A definir</td><td>A defiinir</td><td>A definir</td></tr>
@@ -148,7 +153,7 @@
 					<div class="container">
 						<div class="row">
 							<div class="12u">
-								<table style="width:100%;table-layout:fixed;">
+								<table style="width:100%;table-layout:fixed;" id="table-visitas">
 							<thead style="font-weight:600;"><th>Empresa</th><th>Data</th><th>Horário</th><th>Preço</th><th>Vagas</th></thead>
 							<tbody>
 								<tr><td><img src="http://www.redeconrn.com.br/img/logo/logo-fortcola.PNG" /></td><td>28-04-2014</td><td>09:00h</td><td>R$ 10,00</td><td>25</td></tr>
