--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							<h1>VIII Semana de</h1>
 							<h1> Engenharia de Produção</h1>
 							<div class="video-container">
-								<iframe width="711" height="400" src="https://www.youtube.com/embed/3bjSZIjjJQw?rel=0&autoplay=1" frameborder="0" allowfullscreen></iframe>
+								<object width="711" height="400"><param name="movie" value="http://swf.tubechop.com/tubechop.swf?vurl=3bjSZIjjJQw&start=0&end=33.56&cid=2495049"></param><embed src="http://swf.tubechop.com/tubechop.swf?vurl=3bjSZIjjJQw&start=0&end=33.56&cid=2495049" type="application/x-shockwave-flash" allowfullscreen="true" width="711" height="400"></embed></object>
 							</div>
 						</div>
 						<div class="4u" style="padding-top:9em!important">
