--- a/index.html
+++ b/index.html
@@ -102,14 +102,14 @@
 					<div class="container">
 						<div class="row">
 							<div class="12u">
-								<table style="width:100%;" id="table-palestras">
+							<!--	<table style="width:100%;" id="table-palestras">
 							<thead style="font-weight:600;"><th>Palestrante</th><th>Data</th><th>Horário</th><th>Preço</th><th>Vagas</th></thead>
 							<tbody>
 								<tr><td>Dr Klenio Alves</td><td>29-04-2014</td><td>A definir</td><td>A defiinir</td><td>A definir</td></tr>
 							</tbody>
 						</table>
 							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> Em breve link para pagamento online!</span>
-							</div>
+							</div>-->
 						</div>
 						<div class="row">
 							<div class="4u">
