Image location changed

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 		}
 
 		 .wrapper-style4 {
-			background-image: url('images/LOGO - SEP.jpg');
+			background-image: url('LOGO - SEP.jpg');
 			background-repeat: no-repeat;
 			-webkit-background-size: cover;
 			 -moz-background-size: cover;
