--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!DOCTYPE HTML>
-<!--
-	Miniport 2.5 by HTML5 UP
-	html5up.net | @n33co
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
 <html>
 	<head>
 		<title>VIII Semana de Engenharia de Produção</title>
@@ -24,11 +18,40 @@
 		<!--[if lte IE 7]><link rel="stylesheet" href="css/ie7.css" /><![endif]-->
 	</head>
 
+	<script type="text/javascript">
+	 $( document ).ready(function() {
+		$('#entrar-site').on('click', function() {
+			$('.landing-page').remove();
+			$('.wrapper').css('display', 'block');
+		});
+
+		});
+
+	</script>
+
 	<style type="text/css">
 
+		.landing-page {
+			width: 100%;
+			height: 100%;
+			background-image: url('LOGO - SEP.jpg');
+			background-repeat: no-repeat;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+		}
 
+		.landing-page > button {
+			padding: 20px 50px;
+			font-size: 16px;
+			margin-top:42%;
+			margin-left: 45%;
+			margin-right: 38%;
+			position: absolute;
+		}
 
-		.video-container {
+				.video-container {
 		    position: relative;
 		    padding-bottom: 56.25%;
 		    padding-top: 30px; height: 0; overflow: hidden;
@@ -52,6 +75,18 @@
 			width: 35%;
 		}
 
+		tbody {
+			text-align: center;
+		}
+
+		.wrapper {
+			display: none;
+		}
+
+		.apoio {
+			background-color: white;
+		}
+
 		 .wrapper-style4 {
 			background-image: url('LOGO - SEP.jpg');
 			background-repeat: no-repeat;
@@ -60,10 +95,8 @@
 			  -o-background-size: cover;
 			  background-size: cover;
 		}
-
-
 	</style>
-	
+
 	<body>
 
 		<!-- Nav -->
@@ -73,9 +106,14 @@
 					<li><a href="#palestras">Palestras</a></li>
 					<li><a href="#visitas">Visitas Técnicas</a></li>
 					<li><a href="#minicursos">Minicursos</a></li>
+					<li><a href="#apoio">Apoio</a></li>
 					<li><a href="#contato">Contato</a></li>
 				</ul>
 			</nav>
+
+			<div class="landing-page">
+				<button id="entrar-site">ENTRAR NO SITE</button>
+			</div>
 
 		<!-- Home -->
 			<div class="wrapper wrapper-style1 wrapper-first" style="padding-top:7em">
@@ -259,6 +297,18 @@
 					</div>
 			</div>
 
+			<div class="wrapper apoio">
+				<article id="apoio" class="container small">
+					<div class="row">
+						<div class="12u">
+							<h2>Apoio</h2>
+							<img src="LOGO-SEBRAE.jpg" style="margin-right:15%;">
+							<img src="LOGO- ATELIER NATAL.jpg">
+
+						</div>
+					</div>	
+			</article>
+			</div>
 
 		<!-- Contact -->
 			<div class="wrapper wrapper-style4">
@@ -275,7 +325,7 @@
 										<li class="facebook"><a href="https://www.facebook.com/profile.php?id=100006105035145" target="_blank" class="fa fa-facebook"><span>Facebook</span></a></li>
 									</ul>
 								</div>
-								<div>
+								<div style="float:right;margin-right:20%;">
 									<span>Mariana Freitas - 96895490</span><br>
 									<span>Winayara - 99321822</span><br>
 									<span>Gilberto - 96460416</span><br>
@@ -311,7 +361,6 @@
 					</footer>
 				</article>
 			</div>
-
-
 	</body>
+
 </html>
