--- a/index.html
+++ b/index.html
@@ -32,18 +32,14 @@
 	<style type="text/css">
 
 		.landing-page {
-	
+			width: 100%;
+			height: 100%;
 			background-image: url('LOGO - SEP.jpg');
 			background-repeat: no-repeat;
 			-webkit-background-size: cover;
 			-moz-background-size: cover;
 			-o-background-size: cover;
 			background-size: cover;
-			    display:block;
-			    position:absolute;
-		    z-index:1;
-		    min-width:100%;
-		    min-height:100%;
 		}
 
 		.landing-page > button {
@@ -52,7 +48,6 @@
 			margin-top:42%;
 			margin-left: 45%;
 			margin-right: 38%;
-			position: absolute;
 		}
 
 				.video-container {
