--- a/index.html
+++ b/index.html
@@ -148,21 +148,22 @@
 					<div class="container">
 						<div class="row">
 							<div class="12u">
-							<table style="width:100%;" id="table-palestras">
-							<thead style="font-weight:600;"><th>Palestrante</th><th>Data</th><th>Horário</th><th>Tema</th><th>Preço</th></thead>
+							<table style="width:80%;margin-left:15%;" id="table-palestras">
+							<thead style="font-weight:600;"><th>Palestrante</th><th>Data</th><th>Tema</th></thead>
 							<tbody>
-								<tr><td>Neto Camelo</td><td>28-04-2014</td><td>A definir</td><td>O caso de sucesso da empresa Fortcola</td><td>A defiinir</td></tr>
-								<tr><td>Aderbal Soares</td><td>28-04-2014</td><td>A definir</td><td>Motivação Empresarial</td><td>A definir</td></tr>
-								<tr><td>Klênio Alves</td><td>29-04-2014</td><td>A definir</td><td>Dimensão da Indústria no RN</td><td>A definir</td></tr>
-								<tr><td>Marcos Rosa</td><td>29-04-2014</td><td>A definir</td><td>Planejamento Estratégico</td><td>A definir</td></tr>
-								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td>A definir</td><td>A definir</td><td>A defiinir</td></tr>
-								<tr><td>Jodibel</td><td>30-04-2014</td><td>A definir</td><td>Mesa Redonda: Questões de carreira</td><td>A definir</td></tr>
+								<tr><td>Neto Camelo</td><td>28-04-2014</td><td>O caso de sucesso da empresa Fortcola</td></tr>
+								<tr><td>Aderbal Soares</td><td>28-04-2014</td><td>Motivação Empresarial</td></tr>
+								<tr><td>Klênio Alves</td><td>29-04-2014</td><td>Dimensão da Indústria no RN</td></tr>
+								<tr><td>Marcos Rosa</td><td>29-04-2014</td><td>Planejamento Estratégico</td></tr>
+								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td>A definir</td></tr>
+								<tr><td>Jodibel</td><td>30-04-2014</td><td>Mesa Redonda: Questões de carreira</td></tr>
+								<tr><td>Ednaldo Barreto</td><td>30-04-2014</td><td>Desafios do mercado</td></tr>
 							</tbody>
 						</table>
 							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> Em breve link para pagamento online!</span>
 
 							<br><br>
-							<div id="palestrantes-perfil" 
+							<!--<div id="palestrantes-perfil" 
 							style="width: 60%;
 									margin-left: 20%;
 									margin-right: 20%;
@@ -182,7 +183,7 @@
 								<p><span style="font-weight:700;">Marcos Rosa</span>: Empresário; Consultor da metodologia de Ferramentas de Gestão 
 								Avançadas – FGA (Sebrae Mais); Instrutor da metodologia de Planejamento Estratégico 
 								no Sebrae; Professor da Universidade Potiguar – UnP.</p>
-							</div>
+							</div>-->
 						</div>
 						</div>
 						<div class="row">
@@ -284,13 +285,13 @@
 							<table style="width:100%;" id="table-minicursos">
 							<thead style="font-weight:600;"><th>Minicurso</th><th>Data</th><th>Horário</th><th>Preço</th></thead>
 							<tbody>
-								<tr><td>Plano de Negócio - Parte 1: A elaboração do Plano de Negócio</td><td>28-04-2014</td><td>08h-12h</td><td>A definir</td></tr>
-								<tr><td>Líder Coach com a aplicação de uma técnica de Feedback</td><td>28-04-2014</td><td>15h-17h</td><td>A definir</td></tr>
-								<tr><td>Plano de Negócio - Parte 2: Plano Financeiro</td><td>29-04-2014</td><td>08h-12h</td><td>A definir</td></tr>
-								<tr><td>Teoria das Restrições</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>A definir</td></tr>
+								<tr><td>Plano de Negócio - Parte 1: A elaboração do Plano de Negócio</td><td>28-04-2014</td><td>08h-12h</td><td>R$ 15,00</td></tr>
+								<tr><td>Líder Coach com a aplicação de uma técnica de Feedback</td><td>28-04-2014</td><td>15h-17h</td><td>R$ 10,00</td></tr>
+								<tr><td>Plano de Negócio - Parte 2: Plano Financeiro</td><td>29-04-2014</td><td>08h-12h</td><td>--</td></tr>
+								<tr><td>Teoria das Restrições</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>R$ 10,00</td></tr>
 							</tbody>
 						</table>
-							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> Em breve link para pagamento online!</span>
+							<span> Em breve link para pagamento online!</span>
 							</div>
 						</div>
 					</div>
@@ -302,7 +303,8 @@
 						<div class="12u">
 							<h2>Apoio</h2>
 							<img src="LOGO-SEBRAE.jpg" style="margin-right:15%;">
-							<img src="LOGO- ATELIER NATAL.jpg">
+							<img src="LOGO- ATELIER NATAL.jpg" style="margin-right:15%;">
+							<img src="logo-favorito.jpg" style="width:25%;">
 
 						</div>
 					</div>	
