--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
 						<div class="row">
 							<div class="12u">
 							<table style="width:100%;" id="table-minicursos">
-							<thead style="font-weight:600;"><th>Minicurso</th><th>Data</th><th>Horário</th><th>Preço</th></thead>
+							<thead style="font-weight:600;"><th>Minicurso</th><th>Data</th><th>Horário</th><th>Preço</th><th>Vagas</th></thead>
 							<tbody>
-								<tr><td>Plano de Negócio - Parte 1: A elaboração do Plano de Negócio</td><td>28-04-2014</td><td>08h-12h</td><td>R$ 15,00</td></tr>
-								<tr><td>Líder Coach com a aplicação de uma técnica de Feedback</td><td>28-04-2014</td><td>15h-17h</td><td>R$ 10,00</td></tr>
-								<tr><td>Plano de Negócio - Parte 2: Plano Financeiro</td><td>29-04-2014</td><td>08h-12h</td><td>--</td></tr>
-								<tr><td>Teoria das Restrições</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>R$ 10,00</td></tr>
+								<tr><td>Plano de Negócio - Parte 1: A elaboração do Plano de Negócio</td><td>28-04-2014</td><td>08h-12h</td><td>R$ 15,00</td><td>20</td></tr>
+								<tr><td>Líder Coach com a aplicação de uma técnica de Feedback</td><td>28-04-2014</td><td>15h-17h</td><td>R$ 10,00</td><td>20</td></tr>
+								<tr><td>Plano de Negócio - Parte 2: Plano Financeiro</td><td>29-04-2014</td><td>08h-12h</td><td>--</td><td>20</td></tr>
+								<tr><td>Teoria das Restrições</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>R$ 10,00</td><td>20</td></tr>
 							</tbody>
 						</table>
 							<span> Em breve link para pagamento online!</span>
