--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 								<tr><td>Ednaldo Barreto</td><td>30-04-2014</td><td>Desafios do mercado</td></tr>
 							</tbody>
 						</table>
-							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> Em breve link para pagamento online!</span>
+							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> ou no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
 
 							<br><br>
 							<!--<div id="palestrantes-perfil" 
@@ -212,7 +212,7 @@
 
 					</div>
 					<footer>
-						<p>Interessado? Em breve divulgaremos a programação completa e abriremos as inscrições!</p>
+						<p>Interessado? Compre seu ingresso, vagas limitadas!</p>
 						<!--<a href="#portfolio" class="button button-big">See some of my recent work</a>-->
 					</footer>
 				</article>
@@ -237,7 +237,7 @@
 							</tbody>
 						</table>
 
-							<span>Pagamento exclusivamente online, em breve divulgaremos o link! </span>
+							<span>Pagamento exclusivamente online <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a>! </span>
 
 							</div>
 						</div>
@@ -266,7 +266,7 @@
 						</div>
 					</div>
 					<footer>
-						<p>Quer se juntar a nós? Aguarde mais informações sobre compra de ingressos e outras visitas!</p>
+						<p>Quer se juntar a nós? Garanta já o seu ingresso!</p>
 						<!--<a href="#contact" class="button button-big">Get in touch with me</a>-->
 					</footer>
 				</article>
@@ -291,7 +291,7 @@
 								<tr><td>Teoria das Restrições</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>R$ 10,00</td><td>20</td></tr>
 							</tbody>
 						</table>
-							<span> Em breve link para pagamento online!</span>
+							<span> Compre agora no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
 							</div>
 						</div>
 					</div>
