--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 								<tr><td>Aderbal Soares</td><td>28-04-2014</td><td>Motivação Empresarial</td></tr>
 								<tr><td>Klênio Alves</td><td>29-04-2014</td><td>Dimensão da Indústria no RN</td></tr>
 								<tr><td>Marcos Rosa</td><td>29-04-2014</td><td>Planejamento Estratégico</td></tr>
-								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td>A definir</td></tr>
+								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td></td></tr>
 								<tr><td>Jodibel</td><td>30-04-2014</td><td>Mesa Redonda: Questões de carreira</td></tr>
 								<tr><td>Ednaldo Barreto</td><td>30-04-2014</td><td>Desafios do mercado</td></tr>
 							</tbody>
