--- a/index.html
+++ b/index.html
@@ -42,6 +42,15 @@
 			background-size: cover;
 		}
 
+		@media (max-width: 480px) {
+    		.landing-page {
+    					width: 100%;
+		height: 100%;
+		background-image: url('logo-sep-mobile.jpg');
+		background-repeat: no-repeat;
+    		}
+		}
+
 		.landing-page > button {
 			padding: 20px 50px;
 			font-size: 16px;
