--- a/index.html
+++ b/index.html
@@ -53,6 +53,19 @@
     		}
 		}
 
+		@media only screen and (max-device-width : 480px) and (orientation: landscape) {
+			.landing-page {
+						width: 100%;
+			height: 100%;
+			background-image: url('LOGO - SEP.jpg');
+			background-repeat: no-repeat;
+			-webkit-background-size: cover;
+			-moz-background-size: cover;
+			-o-background-size: cover;
+			background-size: cover;
+			}
+		}
+
 		.landing-page > button {
 			padding: 20px 50px;
 			font-size: 16px;
