--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			background-size: cover;
 		}
 
-		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) {
+		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation: portrait){
 
     		.landing-page {
 
