button css mobile

--- a/index.html
+++ b/index.html
@@ -64,6 +64,10 @@
 
     		.landing-page > button {
     			margin-top: 80%;
+    			font-size: 20px;
+    			background-color: transparent;
+    			color: white;
+    			font-weight: 700;
     		}
 		}
 
