button css mobile

--- a/index.html
+++ b/index.html
@@ -110,12 +110,13 @@
     		.landing-page {
 				background-image: url('logo-sep-mobile.jpg') !important;
 				height: 100%;
+				width: 100%;
 				background-repeat: no-repeat;
     		}
 
     		.landing-page > button {
     			width: 50%;
-    			margin-top: 90%;
+    			margin-top: 100%;
     			font-size: 30px;
     			background-color: transparent;
     			color: white;
