--- a/index.html
+++ b/index.html
@@ -121,6 +121,7 @@
     			background-color: transparent;
     			color: white;
     			font-weight: 700;
+    			margin-right: 20px;
     		}
 		}
 
