landing page final fixes

--- a/index.html
+++ b/index.html
@@ -112,6 +112,10 @@
 				height: 100%;
 				width: 100%;
 				background-repeat: no-repeat;
+				-webkit-background-size: cover;
+				-moz-background-size: cover;
+				-o-background-size: cover;
+				background-size: cover;
     		}
 
     		.landing-page > button {
