button css mobile

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     			background-color: transparent;
     			color: white;
     			font-weight: 700;
-    			margin-right: 50px;
+    			margin-right: 150px;
     		}
 		}
 
@@ -140,6 +140,14 @@
 				-o-background-size: cover;
 				background-size: cover;
 			}
+
+			 .landing-page > button {
+    			width: 50%;
+    			font-size: 40px;
+    			background-color: transparent;
+    			color: white;
+    			font-weight: 700;
+    		}
 		}
 	</style>
 
