button css margin-right

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     			background-color: transparent;
     			color: white;
     			font-weight: 700;
-    			margin-right: 150px;
+    			margin-left:-30px;
     		}
 		}
 
