--- a/index.html
+++ b/index.html
@@ -108,9 +108,9 @@
 		@media only screen and (min-device-width : 320px) and (max-device-width : 480px) and (orientation: portrait){
 
     		.landing-page {
+    			width: 100%;
+    			height: 100%;
 				background-image: url('logo-sep-mobile.jpg') !important;
-				height: 100%;
-				width: 100%;
 				background-repeat: no-repeat;
 				-webkit-background-size: cover;
 				-moz-background-size: cover;
@@ -125,6 +125,7 @@
     			background-color: transparent;
     			color: white;
     			font-weight: 700;
+    			margin-left: -2px;
     		}
 		}
 
