--- a/index.html
+++ b/index.html
@@ -150,8 +150,7 @@
     		}
 		}
 		
-		@media 
-only screen and (max-width: 760px)  {
+	@media only screen and (max-width: 760px)  {
 
 	/* Force table to not be like tables anymore */
 	table, thead, tbody, th, td, tr { 
