--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
 								<tr><td>Aderbal Soares</td><td>28-04-2014</td><td>Motivação Empresarial</td></tr>
 								<tr><td>Klênio Alves</td><td>29-04-2014</td><td>Dimensão da Indústria no RN</td></tr>
 								<tr><td>Marcos Rosa</td><td>29-04-2014</td><td>Planejamento Estratégico</td></tr>
-								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td></td></tr>
+								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td>Pensando fora da caixa</td></tr>
 								<tr><td>Jodibel</td><td>30-04-2014</td><td>Mesa Redonda: Questões de carreira</td></tr>
 								<tr><td>Ednaldo Barreto</td><td>30-04-2014</td><td>Desafios do mercado</td></tr>
 							</tbody>
@@ -379,7 +379,9 @@
 								<tr><td>Plano de Negócio - Parte 1: A elaboração do Plano de Negócio</td><td>28-04-2014</td><td>08h-12h</td><td>R$ 15,00</td><td>20</td></tr>
 								<tr><td>Líder Coach com a aplicação de uma técnica de Feedback</td><td>28-04-2014</td><td>15h-17h</td><td>R$ 10,00</td><td>20</td></tr>
 								<tr><td>Plano de Negócio - Parte 2: Plano Financeiro</td><td>29-04-2014</td><td>08h-12h</td><td>--</td><td>20</td></tr>
+								<tr><td>Gestão de Cursos</td><td>29-04-2014</td><td>10h-12h e 14-16h</td><td>R$ 10,00</td><td>20</td></tr>
 								<tr><td>Teoria das Restrições</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>R$ 10,00</td><td>20</td></tr>
+
 							</tbody>
 						</table>
 							<span> Compre agora no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
