--- a/index.html
+++ b/index.html
@@ -254,7 +254,7 @@
 							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> ou no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
 
 							<br><br>
-							<!--<div id="palestrantes-perfil" 
+							<div id="palestrantes-perfil" 
 							style="width: 60%;
 									margin-left: 20%;
 									margin-right: 20%;
@@ -274,7 +274,16 @@
 								<p><span style="font-weight:700;">Marcos Rosa</span>: Empresário; Consultor da metodologia de Ferramentas de Gestão 
 								Avançadas – FGA (Sebrae Mais); Instrutor da metodologia de Planejamento Estratégico 
 								no Sebrae; Professor da Universidade Potiguar – UnP.</p>
-							</div>-->
+					
+								<p><span style="font-weight:700;">Neto Camelo</span>: Formado em Administração pela Universidade Federal do Rio Grande do Norte; Empresário</p>
+
+								<p><span style="font-weight:700;">Augusto Pimenta</span>: Bacharel em Ciências e Tecnologia pela Universidade Federal do Rio 
+								Grande do Norte, Professional and Self Coach pelo Instituto Brasileiro de Coaching com 
+								certificação internacional pelo Behavioral Coaching Institute (BCI) e European Coaching 
+								Association (ECA) e cursa MBA em Gestão Estratégica de Negócios pela UniFacex. 
+								Atualmente é empreendedor e desenvolvedor na Recruti.</p>
+
+							</div>
 						</div>
 						</div>
 						<div class="row">
