--- a/index.html
+++ b/index.html
@@ -252,6 +252,7 @@
 							</tbody>
 						</table>
 							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> ou no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
+							<span>Os participantes receberão certificados por participação nas palestras.</span>
 
 							<br><br>
 							<div id="palestrantes-perfil" 
@@ -376,7 +377,7 @@
 				<article id="minicursos">
 					<header>
 						<h2>Minicursos</h2>
-						<span>Em breve disponibilizaremos a lista completa de todos os minicursos que acontecerão na VIII Semana de Engenharia de Produção</span>
+						<!--<span>.</span>-->
 					</header>
 				</article>
 					<div class="container">
@@ -394,6 +395,7 @@
 							</tbody>
 						</table>
 							<span> Compre agora no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
+							<span>Os participantes receberão certificados por participação nos minicursos</span>
 							</div>
 						</div>
 					</div>
