--- a/index.html
+++ b/index.html
@@ -249,6 +249,7 @@
 								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td>Pensando fora da caixa</td></tr>
 								<tr><td>Jodibel Niklas</td><td>30-04-2014</td><td>Mesa Redonda: Questões de carreira</td></tr>
 								<tr><td>Ednaldo Barreto</td><td>30-04-2014</td><td>Desafios do mercado</td></tr>
+								<tr><td>Cláudio Ávila</td><td>30-04-2014</td><td>Trajetória profissional</td></tr>
 							</tbody>
 						</table>
 							<span>Pagamento direto com qualquer membro do <a href="#contato">CA de Engenharia de Produção.</a> ou no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
@@ -263,21 +264,21 @@
 									text-align: justify;">
 								<h3 style="text-align:center;">Perfil dos Palestrantes</h3>
 
+								<p><span style="font-weight:700;">Neto Camelo</span>: Formado em Administração pela Universidade Federal do Rio Grande do Norte; Empresário.</p>
+
+								<p><span style="font-weight:700;">Aderbal Soares</span>: Formado em Psicologia pela UFPE; Pós graduado em Gestão 
+								Estratégica de Pessoas; Consultor e Instrutor do SEBRAE nas áreas de RH e 
+								Empreendedorismo.</p>
+
 								<p><span style="font-weight:700;">Klenio Alves</span>: Economista com especialização em gestões de negócios pela UFRN , 
 								atual secretário de Desenvolvimento Econômico de São Gonçalo do Amarante, foi 
 								Coordenador da CODIT – Coordenadoria de Desenvolvimento Industrial e Presidente 
 								da Comissão de Acompanhamento e Controle do PROADI – Programa de Apoio ao 
 								Desenvolvimento Industrial.</p> 
 
-								<p><span style="font-weight:700;">Aderbal Soares</span>: Formado em Psicologia pela UFPE; Pós graduado em Gestão 
-								Estratégica de Pessoas; Consultor e Instrutor do SEBRAE nas áreas de RH e 
-								Empreendedorismo.</p>
-
 								<p><span style="font-weight:700;">Marcos Rosa</span>: Empresário; Consultor da metodologia de Ferramentas de Gestão 
 								Avançadas – FGA (Sebrae Mais); Instrutor da metodologia de Planejamento Estratégico 
 								no Sebrae; Professor da Universidade Potiguar – UnP.</p>
-					
-								<p><span style="font-weight:700;">Neto Camelo</span>: Formado em Administração pela Universidade Federal do Rio Grande do Norte; Empresário</p>
 
 								<p><span style="font-weight:700;">Augusto Pimenta</span>: Bacharel em Ciências e Tecnologia pela Universidade Federal do Rio 
 								Grande do Norte, Professional and Self Coach pelo Instituto Brasileiro de Coaching com 
@@ -404,19 +405,39 @@
 						<div class="row">
 							<div class="12u">
 							<table style="width:100%;" id="table-minicursos">
-							<thead style="font-weight:600;"><th>Minicurso</th><th>Data</th><th>Horário</th><th>Preço</th><th>Vagas</th></thead>
+							<thead style="font-weight:600;"><th>Minicurso</th><th>Ministrante</th><th>Data</th><th>Horário</th><th>Preço</th><th>Vagas</th></thead>
 							<tbody>
-								<tr><td>Plano de Negócio - Parte 1: A elaboração do Plano de Negócio</td><td>28-04-2014</td><td>08h-12h</td><td>R$ 15,00</td><td>20</td></tr>
-								<tr><td>Líder Coach com a aplicação de uma técnica de Feedback</td><td>28-04-2014</td><td>15h-17h</td><td>R$ 10,00</td><td>20</td></tr>
-								<tr><td>Plano de Negócio - Parte 2: Plano Financeiro</td><td>29-04-2014</td><td>08h-12h</td><td>--</td><td>20</td></tr>
-								<tr><td>Gestão de Custos</td><td>29-04-2014</td><td>10h-12h e 14-16h</td><td>R$ 10,00</td><td>30</td></tr>
-								<tr><td>Teoria das Restrições</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>R$ 10,00</td><td>20</td></tr>
+								<tr><td>Plano de Negócio - Parte 1: A elaboração do Plano de Negócio</td><td>Henderson César</td><td>28-04-2014</td><td>08h-12h</td><td>R$ 15,00</td><td>20</td></tr>
+								<tr><td>Líder Coach com a aplicação de uma técnica de Feedback</td><td>Jodibel Niklas</td><td>28-04-2014</td><td>15h-17h</td><td>R$ 10,00</td><td>20</td></tr>
+								<tr><td>Plano de Negócio - Parte 2: Plano Financeiro</td><td></td><td>29-04-2014</td><td>08h-12h</td><td>--</td><td>20</td></tr>
+								<tr><td>Gestão de Custos</td><td>Maria Silene</td><td>29-04-2014</td><td>10h-12h e 14-16h</td><td>R$ 10,00</td><td>30</td></tr>
+								<tr><td>Teoria das Restrições</td><td>Renato Cássio Santos</td><td>30-04-2014</td><td>13:30h-17:30h</td><td>R$ 10,00</td><td>20</td></tr>
 
 							</tbody>
 						</table>
 							<span> Compre agora no <a href="http://www.eventick.com.br/sep2014" target="_blank">Eventick</a></span>
 							<br>
 							<span>Os participantes receberão certificados por participação nos minicursos</span>
+							<br><br>
+							<div id="ministrantes-perfil" 
+							style="width: 60%;
+									margin-left: 20%;
+									margin-right: 20%;
+									text-align: justify;">
+								<h3 style="text-align:center;">Perfil dos Ministrantes</h3>
+
+								<p><span style="font-weight:700;">Henderson César</span>: Economista, especialista em gestão de empresas, em finanças e gestão estratégica de negócios e marketing.
+								</p>
+
+								<p><span style="font-weight:700;">Jodibel Niklas</span>: <a href="#palestrantes-perfil">Verificar no perfil dos palestrantes</a>
+								</p>
+
+								<p><span style="font-weight:700;">Maria Silene</span>: Coordenadora da Pós-graduação em Engenharia de Produção da UFPB</p>
+
+								<span style="font-weight:700;">Renato Cássio Santos</span>: Formado em Engenharia de Produção pela UFRN, atualmente trabalhando nas lojas Riachuelos e anteriormente no Grupo Guararapes Confecções.
+								</p>
+
+							</div>
 							</div>
 						</div>
 					</div>
