--- a/index.html
+++ b/index.html
@@ -305,6 +305,8 @@
 								Consensus, além de desenvolver Programas de Capacitação em Liderança– PDL com a 
 								presença de diversos empresários e empresas.</p>
 
+								<p><span style="font-weight:700;">Ednaldo Barreto</span>: Bacharel em Ciências Jurídicas e Sociais pela Universidade de Tiradentes (Aracaju - SE). Diretor da Coco & cia, diretor da FIERN. Fundador e presidente CDL São José de Mipibu. Atuação na área comercial por 14 anos na Johnson & Johnson e Unilever. Secretário de Desenvolvimento Econômico de São José de Mipibu</p>
+
 							</div>
 						</div>
 						</div>
