Info update, date and time

--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
 					<header>
 						<h2>Palestras</h2>
 						<span>Venha conferir palestras sobre os diversos assuntos ligados a Engenharia de Produção</span>
+						<br><br>
+						<span>Local: Auditório da Reitoria. 19h às 22h.</span>
 					</header>
 					<div class="container">
 						<div class="row">
@@ -246,7 +248,7 @@
 								<tr><td>Aderbal Soares</td><td>28-04-2014</td><td>Motivação Empresarial</td></tr>
 								<tr><td>Klênio Alves</td><td>29-04-2014</td><td>Dimensão da Indústria no RN</td></tr>
 								<tr><td>Marcos Rosa</td><td>29-04-2014</td><td>Planejamento Estratégico</td></tr>
-								<tr><td>Augusto Pimenta</td><td>29-04-2014</td><td>Pensando fora da caixa</td></tr>
+								<!--<tr><td>Jorge</td><td>29-04-2014</td><td>Pensando fora da caixa</td></tr>-->
 								<tr><td>Jodibel Niklas</td><td>30-04-2014</td><td>Mesa Redonda: Questões de carreira</td></tr>
 								<tr><td>Ednaldo Barreto</td><td>30-04-2014</td><td>Desafios do mercado</td></tr>
 								<tr><td>Cláudio Ávila</td><td>30-04-2014</td><td>Trajetória profissional</td></tr>
@@ -280,11 +282,11 @@
 								Avançadas – FGA (Sebrae Mais); Instrutor da metodologia de Planejamento Estratégico 
 								no Sebrae; Professor da Universidade Potiguar – UnP.</p>
 
-								<p><span style="font-weight:700;">Augusto Pimenta</span>: Bacharel em Ciências e Tecnologia pela Universidade Federal do Rio 
+								<!--<p><span style="font-weight:700;">Augusto Pimenta</span>: Bacharel em Ciências e Tecnologia pela Universidade Federal do Rio 
 								Grande do Norte, Professional and Self Coach pelo Instituto Brasileiro de Coaching com 
 								certificação internacional pelo Behavioral Coaching Institute (BCI) e European Coaching 
 								Association (ECA) e cursa MBA em Gestão Estratégica de Negócios pela UniFacex. 
-								Atualmente é empreendedor e desenvolvedor na Recruti.</p>
+								Atualmente é empreendedor e desenvolvedor na Recruti.</p>-->
 
 								<p><span style="font-weight:700;">Jodibel Niklas</span>: Mestre em Engenhariade Produção pela Universidade Federal do Rio Grande do Norte–UFRN e Personal and Executive Coach pelo Integrated Coaching 
 								Institute---ICI/USA. ÉConsultor Empresarial há mais de 07 anos e atuou como professor 
@@ -348,6 +350,8 @@
 					<header>
 						<h2>Visitas Técnicas</h2>
 						<span>Conheça como é a engenharia de produção aplicada no contexto de uma empresa</span>
+						<br><br>
+						<span>Local de saída: prédio da ECT</span>
 					</header>
 					<div class="container">
 						<div class="row">
